--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 server.port = 8081
-spring.security.user.name=arpit
-spring.security.user.password=arpit
+#spring.security.user.name=arpit
+#spring.security.user.password=arpit
